[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
macros = {path="./macros"}
datastructure = {path="./datastructure"}

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", ".cargo/docs-header.html" ]

[workspace]
members = [
    "macros",
    "datastructure"
]